--- a/src/app/calculator-list/calculator-list.component.html
+++ b/src/app/calculator-list/calculator-list.component.html
@@ -3,7 +3,7 @@
 
   <h3><a [title]="calculator.name + ' details'">{{ calculator.name }}</a></h3>
   <p *ngIf="calculator.description">Description: {{ calculator.description }}</p>
-  <button (click)="share()">Share</button>
+  <!-- <button (click)="share()">Share</button> -->
 
 </div>
 
