--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,8 @@
 <a [routerLink]="['/']">
-  <h1>My First App</h1>
+  <h1>Wholesale App</h1>
 </a>
 
-<a class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
+<!-- <a class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a> -->
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
