--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -2,7 +2,7 @@
   <h1>Wholesale App</h1>
 </a>
 
-<!-- <a class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a> -->
+<a class="button fancy-button"><i class="material-icons">functions </i>Calculators</a>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
