--- a/src/app/client-details/client-details.component.html
+++ b/src/app/client-details/client-details.component.html
@@ -4,11 +4,12 @@
   <h3>{{ client.business }}<Br>{{ client.address }} {{ client.city }}, {{ client.state }} {{ client.zip }}</h3>
   <p>Name: {{ client.owner }}<br>Phone: {{ client.phone | phone:'US' }}<br>Email: {{ client.email }}</p>
   <p>Area of Interest: {{client.fliplocation}}</p>
+  
   <div *ngIf="client.flipped">
     <h3>Recently Flipped Homes:</h3>
-    <p>{{ client.flipped }}</p></div>
-</div>
-<!-- This will display a map of houses flipped -->
-<div *ngIf="client.flipped">
-  <div id="viewDiv"></div>
+    <p>{{ client.flipped }}</p>
+    <p>Purchase Price:</p>
+    <p>Purchase Date: </p>
+    <p>Sale Date: </p>
+  </div>
 </div>
