--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* Global Styles */
-
+@import '~bootstrap/dist/css/bootstrap.css';
 * {
   font-family: 'Roboto', Arial, sans-serif;
   color: #616161;
