--- a/src/app/client-details/client-details.component.html
+++ b/src/app/client-details/client-details.component.html
@@ -1,4 +1,4 @@
-<h2>Product Details</h2>
+<h2>Client Details</h2>
 
 <div *ngIf="client">
   <h3>{{ client.business }}<Br>{{ client.address }} {{ client.city }}, {{ client.state }} {{ client.zip }}</h3>
